# libkml

./: CMakeLists.txt  meson.build
src/kml/: CMakeLists.txt  config.h  meson.build
src/kml/base/: CMakeLists.txt  attributes.cc  attributes.h  csv_splitter.h  date_time.cc  date_time.h  expat_handler.cc  expat_handler.h  expat_handler_ns.cc  expat_handler_ns.h  expat_parser.cc  expat_parser.h  file.cc  file.h  file_win32.cc  math_util.h  memory_file.h  net_cache.h  net_cache_test_util.h  referent.cc  referent.h  string_util.cc  string_util.h  tempfile.h  time_util.cc  uri_parser.cc  uri_parser.h  version.h  xml_element.cc  xml_element.h  xml_file.cc  xml_file.h  xml_namespaces.cc  xml_namespaces.h  xmlns.cc  xmlns.h  zip_file.cc  zip_file.h
src/kml/base/missing/: strptime.h  strtod.cc
src/kml/base/win32/: README.txt  strptime.c  strptime.cc
src/kml/convenience/: CMakeLists.txt  atom_util.cc  atom_util.h  convenience.cc  convenience.h  csv_file.cc  csv_file.h  csv_parser.cc  csv_parser.h  element_counter.cc  element_counter.h  feature_list.h  google_doc_list.cc  google_doc_list.h  google_maps_data.cc  google_maps_data.h  google_picasa_web.cc  google_picasa_web.h  google_spreadsheets.cc  google_spreadsheets.h  gpx_trk_pt_handler.cc  gpx_trk_pt_handler.h  http_client.cc  http_client.h  kml_feature_list_saver.cc  kml_feature_list_saver.h  kmz_check_links.cc  kmz_check_links.h
src/kml/dom/: CMakeLists.txt  abstractlatlonbox.cc  abstractview.cc  abstractview.h  atom.cc  atom.h  balloonstyle.cc  balloonstyle.h  colorstyle.cc  colorstyle.h  container.cc  container.h  document.cc  document.h  element.cc  element.h  extendeddata.cc  extendeddata.h  feature.cc  feature.h  folder.cc  geometry.cc  geometry.h  gx_timeprimitive.cc  gx_timeprimitive.h  gx_tour.cc  gx_tour.h  hotspot.cc  hotspot.h  iconstyle.cc  iconstyle.h  kml.cc  kml.h  kml_cast.cc  kml_cast.h  kml_factory.cc  kml_factory.h  kml_funcs.h  kml_handler.cc  kml_handler.h  (+52 more)
src/kml/engine/: CMakeLists.txt  bbox.cc  bbox.h  clone.cc  entity_mapper.cc  entity_mapper.h  feature_balloon.h  feature_view.cc  feature_view.h  feature_visitor.cc  feature_visitor.h  find.h  find_xml_namespaces.h  get_link_parents.cc  get_link_parents.h  get_links.cc  get_links.h  href.cc  href.h  id_mapper.h  kml_cache.cc  kml_cache.h  kml_file.cc  kml_file.h  kml_stream.cc  kml_stream.h  kml_uri.cc  kml_uri.h  kml_uri_internal.h  kmz_cache.cc  kmz_cache.h  kmz_file.cc  kmz_file.h  link_util.cc  link_util.h  location_util.h  merge.h  object_id_parser_observer.cc  object_id_parser_observer.h  old_schema_parser_observer.cc  (+18 more)
src/kml/regionator/: CMakeLists.txt  feature_list_region_handler.cc  feature_list_region_handler.h  region_handler.cc  region_handler.h  regionator.cc  regionator.h  regionator_util.cc  regionator_util.h
src/kml/xsd/: CMakeLists.txt  xsd_complex_type.cc  xsd_complex_type.h  xsd_element.cc  xsd_element.h  xsd_file.cc  xsd_file.h  xsd_handler.cc  xsd_handler.h  xsd_primitive_type.cc  xsd_primitive_type.h  xsd_schema.cc  xsd_schema.h  xsd_simple_type.cc  xsd_simple_type.h  xsd_type.cc  xsd_type.h  xsd_util.h  xst_parser.cc  xst_parser.h
tests/convenience/: google_maps_data_test.cc
